--- a/module06/ex02/Makefile
+++ b/module06/ex02/Makefile
@@ -6,16 +6,18 @@
 #    By: yu <yu@student.42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 11:15:19 by sgath             #+#    #+#              #
-#    Updated: 2021/06/19 17:25:12 by yu               ###   ########.fr        #
+#    Updated: 2021/06/19 18:28:10 by yu               ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS =		main.cpp
 			
+INCLUDES =	A.hpp \
+			B.hpp \
+			C.hpp \
+			Base.hpp \
 
-INCLUDES =	Serialization.hpp
-
-NAME =		Serialization
+NAME =		 Identify
 
 FLAGS =		-Wall -Wextra -Werror
 
