--- a/module07/ex02/Makefile
+++ b/module07/ex02/Makefile
@@ -6,16 +6,16 @@
 #    By: yu <yu@student.42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 11:15:19 by sgath             #+#    #+#              #
-#    Updated: 2021/06/19 17:25:12 by yu               ###   ########.fr        #
+#    Updated: 2021/06/20 15:38:54 by yu               ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS =		main.cpp
-			
 
-INCLUDES =	Serialization.hpp
+INCLUDES =	Array.hpp
 
-NAME =		Serialization
+
+NAME =		array
 
 FLAGS =		-Wall -Wextra -Werror
 
