--- a/module07/ex02/Makefile
+++ b/module07/ex02/Makefile
@@ -6,14 +6,14 @@
 #    By: yu <yu@student.42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 11:15:19 by sgath             #+#    #+#              #
-#    Updated: 2021/06/20 15:38:54 by yu               ###   ########.fr        #
+#    Updated: 2021/06/20 17:18:14 by yu               ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS =		main.cpp
+			Array.cpp
 
 INCLUDES =	Array.hpp
-
 
 NAME =		array
 
