--- a/module08/ex00/Makefile
+++ b/module08/ex00/Makefile
@@ -6,18 +6,17 @@
 #    By: yu <yu@student.42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/20 11:15:19 by sgath             #+#    #+#              #
-#    Updated: 2021/06/20 18:31:39 by yu               ###   ########.fr        #
+#    Updated: 2021/06/28 13:11:34 by yu               ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRCS =		main.cpp \
-			Array.cpp
 
-INCLUDES =	Array.hpp
+INCLUDES =	easyfind.hpp
 
-NAME =		array
+NAME =		easyfind
 
-FLAGS =		-Wall -Wextra -Werror
+FLAGS =		-Wall -Wextra -Werror --std=c++98
 
 .PHONY: 	all clean fclean re
 
